--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="menu_catalog">Catalog</string>
     <string name="menu_setting">Settings</string>
     <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+
+
+    <string name="timkiem">Tìm kiếm</string>
 </resources>
